versioned_docs/version-4.1.x/reference/functions/Invoke-ADTSCCMTask.mdx
---
id: Invoke-ADTSCCMTask
title: Invoke-ADTSCCMTask
hide_title: false
hide_table_of_contents: false
---

## SYNOPSIS

Triggers SCCM to invoke the requested schedule task ID.

## SYNTAX

```powershell
Invoke-ADTSCCMTask [-ScheduleId] <TriggerScheduleId> [<CommonParameters>]
```

## DESCRIPTION

Triggers SCCM to invoke the requested schedule task ID.
This function supports a variety of Schedule Id values as defined via https://learn.microsoft.com/en-us/intune/configmgr/develop/reference/core/clients/client-classes/triggerschedule-method-in-class-sms_client.

## EXAMPLES

### EXAMPLE 1

```powershell
Invoke-ADTSCCMTask -ScheduleId 'SoftwareUpdatesScan'
```

Triggers the 'SoftwareUpdatesScan' schedule task in SCCM.

### EXAMPLE 2

```powershell
Invoke-ADTSCCMTask -ScheduleId 'HardwareInventory'
```

Triggers the 'HardwareInventory' schedule task in SCCM.

## PARAMETERS

### -ScheduleId

Name of the Schedule Id to trigger.

```yaml
Type: TriggerScheduleId
Parameter Sets: (All)
Aliases:
Accepted values: HardwareInventory, SoftwareInventory, HeartbeatDiscovery, SoftwareInventoryFileCollection, IDMIFCollection, ClientMachineAuthentication, RequestMachinePolicy, EvaluateMachinePolicy, RefreshDefaultMp, RefreshLocationServices, LocationServicesCleanup, PolicyAgentRequestAssignment, PolicyAgentEvaluateAssignment, SoftwareMeteringReport, SourceUpdate, ClearProxySettingsCache, PolicyAgentCleanup, UserPolicyAgentCleanup, PolicyAgentValidateMachinePolicy, PolicyAgentValidateUserPolicy, CertificateMaintenance, PeerDistributionPointStatus, PeerDistributionPointProvisioning, SUMUpdatesInstallSchedule, HardwareInventoryCollectionCycle, SoftwareInventoryCollectionCycle, DiscoveryDataCollectionCycle, FileCollectionCycle, IDMIFCollectionCycle, SoftwareMeteringUsageReportCycle, WindowsInstallerSourceListUpdateCycle, SoftwareUpdatesAgentAssignmentEvaluation, BranchDistributionPointMaintenanceTask, UploadStateMessage, StateMessageManager, SoftwareUpdatesScan, UpdateStorePolicy, StateSystemPolicyBulkSendHigh, StateSystemPolicyBulkSendLow, ApplicationManagerPolicyAction, ApplicationManagerUserPolicyAction, ApplicationManagerGlobalEvaluationAction, PowerManagementStartSummarizer, EndpointDeploymentReevaluate, EndpointAMPolicyReevaluate, ExternalEventDetection

Required: True
Position: 1
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### None

### You cannot pipe objects to this function.
## OUTPUTS

### None

### This function does not return any objects.
## NOTES
An active ADT session is NOT required to use this function.

Tags: psadt<br />
Website: https://psappdeploytoolkit.com<br />
Copyright: (C) 2025 PSAppDeployToolkit Team (Sean Lillis, Dan Cunningham, Muhammad Mashwani, Mitch Richters, Dan Gough).<br />
License: https://opensource.org/license/lgpl-3-0

## RELATED LINKS

[https://psappdeploytoolkit.com/docs/reference/functions/Invoke-ADTSCCMTask](https://psappdeploytoolkit.com/docs/reference/functions/Invoke-ADTSCCMTask)
